--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
     <header class="bg-[#EAF7FF]">
         <div class="hidden md:flex px-5 md:px-30 text-[#F49A31] justify-between py-1 items-center">
-            <div class="text-sm font-semibold">info@curavidahealth.com</div>
+            <div class="text-sm font-semibold">Info@curavidahealth.com</div>
             <div class="space-x-5 flex ">
                 <div class="flex space-x-1 items-center"><img src="phone.png" alt="phone" class="h-4 w-4">
                     <span class="font-semibold font-aoboshi-one-regular">+91 92721 33228</span>
