--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
             <img src="patientthread.png" alt="dfg"
                 class="md:absolute md:-right-160 md:top-65 md:max-w-40 absolute top-125 -right-7 max-w-25">
             <img src="yellowstar.png" alt="dfg"
-                class="md:absolute md:-right-96 md:top-12 absolute top-84 right-37 h-5 w-5">
-            <img src="pinktwostar.png" alt="dfg" class="md:absolute md:-right-7 md:top-4 absolute top-70 w-6 h-6">
+                class="md:absolute md:-right-96 md:top-12 absolute top-78 right-31 h-5 w-5">
+            <img src="pinktwostar.png" alt="dfg" class="md:absolute md:-right-7 md:top-4 absolute top-61 w-6 h-6">
             <img src="graytwostar.png" alt="dfg"
                 class="md:absolute md:-right-90 md:top-55 absolute right-43 top-120 w-7 md:w-10 h-7 md:h-10">
             <img src="greentwostar.png" alt="dfg"
@@ -374,7 +374,7 @@
             the best option for personalized<br>
             care.</p>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-20">
-            <div class="font-aoboshi-one-regular h-120 w-75 bg-[#318AC3] rounded-md p-5 flex-col text-white">
+            <div class="font-aoboshi-one-regular h-120 w-70 md:w-75 bg-[#318AC3] rounded-md p-5 flex-col text-white">
                 <h1 class=" text-xl md:text-2xl font-light">Basic Care</h1>
                 <div class="text-2xl md:text-4xl font-lightbold">950 INR <span class="text-sm">per day</span></div>
                 <span class="text-sm font-light">Lorem ipsum dolor sit amet aliquet
@@ -405,7 +405,7 @@
                     <p class="text-sm">Assist with home exercises</p>
                 </div>
                 <div class="flex justify-center my-5">
-                    <button class="px-21 py-2 rounded-lg cursor-pointer   bg-white text-[#318AC3]  ">Get
+                    <button class="px-15 md:px-21 py-2 rounded-lg cursor-pointer text-sm  bg-white text-[#318AC3]  ">Get
                         Started</button>
                 </div>
 
@@ -413,9 +413,10 @@
             </div>
 
             <div
-                class="h-120 w-75 bg-white rounded-md p-5 flex-col text-white font-aoboshi-one-regular  border border-[#318AC3]">
-                <h1 class=" text-2xl  text-[#318AC3] font-lightbold ">Comprehensive Care</h1>
-                <div class="text-4xl font-light  text-[#318AC3]  ">1050 INR<span class="text-sm">per day</span>
+                class="h-120 w-70 md:w-75 bg-white rounded-md p-5 flex-col text-white font-aoboshi-one-regular  border border-[#318AC3]">
+                <h1 class=" text-xl md:text-2xl  text-[#318AC3] font-lightbold ">Comprehensive Care</h1>
+                <div class="text-2xl md:text-4xl font-light  text-[#318AC3]  ">1050 INR<span class="text-sm">per
+                        day</span>
                 </div>
                 <span class="text-sm  text-[#318AC3]  ">Lorem ipsum dolor sit amet aliquet
                     sodales arcu </span>
@@ -444,7 +445,7 @@
                     <p class="text-sm">Deep Bedsore Management</p>
                 </div>
                 <div class="flex justify-center my-5">
-                    <button class="px-21 py-2 rounded-lg cursor-pointer   text-white bg-[#318AC3]  ">Get
+                    <button class="px-15 md:px-21 py-2 rounded-lg cursor-pointer  text-sm text-white bg-[#318AC3]  ">Get
                         Started</button>
                 </div>
                 <div
@@ -456,9 +457,10 @@
             </div>
 
             <div
-                class="h-120 w-75 font-aoboshi-one-regular bg-white rounded-md p-5 flex-col text-white border border-[#318AC3]">
-                <h1 class=" text-2xl font-light text-[#318AC3]">Advanced Care</h1>
-                <div class="text-4xl text-[#318AC3] font-lightbold">1599 INR<span class="text-sm">per day</span></div>
+                class="h-120 w-70 md:w-75 font-aoboshi-one-regular bg-white rounded-md p-5 flex-col text-white border border-[#318AC3]">
+                <h1 class="text-xl md:text-2xl font-light text-[#318AC3]">Advanced Care</h1>
+                <div class="text-2xl md:text-4xl text-[#318AC3] font-lightbold">1599 INR<span class="text-sm">per
+                        day</span></div>
                 <span class="text-sm text-[#318AC3]">Lorem ipsum dolor sit amet aliquet
                     sodales arcu </span>
                 <hr>
@@ -487,7 +489,7 @@
                     <p class="text- sm">Lorem ipsum dolor s</p>
                 </div>
                 <div class="flex justify-center my-5">
-                    <button class="px-21 py-2 rounded-lg cursor-pointer    text-white bg-[#318AC3]  ">Get
+                    <button class="px-15 md:px-21 py-2 rounded-lg cursor-pointer text-sm text-white bg-[#318AC3]  ">Get
                         Started</button>
                 </div>
 
@@ -535,10 +537,11 @@
 
     </section>
     <section class="px-5 pt-30 md:px-25 bg-linear-to-r from-[#FBF6EE] to-[#A1C4DA] relative">
-        <img src="ques2.png" alt="dfg" class="absolute right-0 top-25 max-w-40">
+        <img src="ques2.png" alt="dfg"
+            class="absolute right-0 top-20 max-w-15 md:absolute md:right-0 md:top-25 md:max-w-40">
         <div class="font-aoboshi-one-regular">
-            <h1 class="text-4xl font-lightbold">Frequently Asked <span
-                    class="text-[#F49A31] font-lightbold text-4xl">Questions</span></h1>
+            <h1 class="text-2xl md:text-4xl font-lightbold">Frequently Asked <span
+                    class="text-[#F49A31] font-lightbold text-2xl md:text-4xl">Questions</span></h1>
             <p class="text-sm text-[#868686] mt-4">Here are answers to common questions about our services. Find the
                 information you need
                 below.
@@ -613,8 +616,8 @@
     <section class="relative font-aoboshi-one-regular">
         <div
             class="flex flex-col md:flex-row border border-white md:md:w-240 absolute top-30 left-6 md:absolute md:top-35 md:left-35">
-            <img src="contactus.png" alt="contactus" class="w-70 md:w-120  ">
-            <div class="bg-white px-5 p-3 md:p-5 md:px-20 w-70 md:w-120 ">
+            <img src="contactus.png" alt="contactus" class="w-60 md:w-120 rounded-md ">
+            <div class="bg-white px-5 p-3 md:p-5 md:px-20 w-60 md:w-120 rounded-md ">
                 <div class="flex flex-col">
                     <label class="text-sm mb-2 text-[#323A47]">Name</label>
                     <input class="p-2 w-50 md:w-90 border border-[#868686] rounded-xl  focus:outline-none " type="text"
